--- a/src/components/ArticlesItem/ArticlesItem.scss
+++ b/src/components/ArticlesItem/ArticlesItem.scss
@@ -1,4 +1,5 @@
 .card{
+  position: relative;
   border: 1px solid rgba(83, 83, 83, 0.505);
   overflow: hidden;
   border-radius: 5px;
@@ -18,5 +19,30 @@
   &__author{
     text-align: end;
     font-style: italic;
+  }
+
+  &__close-btn{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    right: 10px;
+    border-radius: 5px;
+    border: 1px solid #8e9ba2;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+  }
+
+  &close-btn:hover {
+    box-shadow: 0 0 3px 1px #000;
+  }
+
+  &close-btn:active {
+    background: rgb(135, 133, 133);
   }
 }
